Fix left margin of post titles on blog index.
The post titles were too far over to the right because I changed the
date format. Now they're appropriately spaced.

Test Plan:
Run `make build serve` and then check out the blog index. See that
there's no weird space between the post titles and the dates.

--- a/sandbox/styles/blog-index.less
+++ b/sandbox/styles/blog-index.less
@@ -79,7 +79,7 @@ h2 {
 
         .post-title {
             display: block;
-            margin-left: 13ch;
+            margin-left: 11ch;
         }
     }
 
